# pytest-xml

./: .gitignore  LICENSE  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  test_dist.sh  tox.ini
.github/: RELEASING.md  dependabot.yml
.github/workflows/: dev.yml  publish-to-test-pypi.yml  test.yml
docs/: index.md
src/pytest_xml/: __init__.py  hooks.py  plugin.py  py.typed  report_data.py  xml_report.py
tests/: conftest.py  test_xml.py
